--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "react": "^18.2.0",
     "react-background-slider": "^3.0.0-0",
     "react-bootstrap": "^2.8.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.8.9",
-    "react-transition-group": "^4.4.5"
+    "react-timer-hook": "^3.0.7",
+    "react-transition-group": "^4.4.5",
+    "reactstrap": "^9.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
