--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-items-carousel": "^2.8.0",
+    "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.8.9",
     "react-timer-hook": "^3.0.7",
